[project]
name = "kiran-pysql"
version = "0.1.0"
description = ""
authors = [
    {name = "kirankm",email = "kiran.k.madan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)"
]

[tool.poetry]
packages = [{include = "kiran_pysql", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
